# Stocks_Forecasting

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  set_env_variables.sh
notebooks/: Trains.ipynb
src/: config.py
src/analysis/: __init__.py  data.py  dataloader.py  preprocessing.py  scraper.py  visualization.py
src/base/: logger.py  paths.py
src/models/: __init__.py  gru.py  lstm.py  rnn.py
src/train/: __init__.py  baseline_model.py  deploy.py  hyperparams.py  model_registry_api.py  predict.py  test_endpoint.py  train.py
stock-forecasting/: cerebrium.toml
tests/: Logic.ipynb  Trains.ipynb
