[tool.poetry]
name = "ts-venv"
version = "0.1.0"
description = ""
authors = ["kewjs1994 <kewjs1994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
comet-ml = "^3.35.5"
optuna = "^3.5.0"
xgboost = "^2.0.3"
lightgbm = "^4.2.0"
holidays = "^0.39"
pvlib = "^0.10.3"
statsmodels = "^0.14.1"
plotly = "^5.18.0"
fire = "^0.5.0"
ta = "^0.11.0"
pyarrow = "^14.0.2"
fastparquet = "^2023.10.1"
ipywidgets = "^8.1.1"
jupyter = "^1.0.0"
torch = "^2.1.2"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
